# jhutils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml  ci.yml
jhutils/: __init__.py  _agents.py  _mealie.py  _obsidian.py  _utils.py  mealie.py  obsidian.py
jhutils/agent/: __init__.py  _assistant.py  _chain_assistant.py
jhutils/agent/tools/: __init__.py  _add_shopping_items.py  _add_tasks.py  _base.py  _read_recipe.py  _respond.py  _schemas.py  _tools.py  _toolset.py
jhutils/agent_tools/: __init__.py  _add_shopping_item.py
jhutils/agents/: __init__.py  assistant.py
jhutils/agents/tools/: __init__.py  _add_shopping_items.py  _add_tasks.py  _chain.py  _respond.py  _toolset.py
tests/: __init__.py  conftest.py  test_agent_tools.py  test_agents.py  test_basic.py  test_mealie.py  test_obsidian.py  test_tools.py  test_utils.py
tests/agent/: test_assistant.py  test_chain_assistant.py  test_schemas.py  test_tools.py  test_toolset.py
